changed the font styling

--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
-      rel="stylesheet"
-    />
     <script
       src="https://kit.fontawesome.com/1193019beb.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;700;800&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Document</title>
+    <title>Vivian Zhang's Portfolio</title>
   </head>
   <body>
-    <div class="d-flex bg-success">
-      <h1>Hello world</h1>
-      <p>Hi there</p>
-      <i class="fab fa-instagram"></i>
+    <div class="hero bg-transparent">
+      <h2>Hi, my name is</h2>
+      <h1>Vivian Zhang</h1>
+      <h4>an aspiring front-end developer based in Canada</h4>
     </div>
   </body>
 </html>
