added a button to the homepage hero and added some css variables to make the code more organized

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
     <title>Vivian Zhang's Portfolio</title>
   </head>
   <body>
-    <div class="hero bg-transparent">
-      <h2>Hi, my name is</h2>
+    <div class="hero bg-transparent text-center">
+      <h2 class="mb-0">Hi, my name is</h2>
       <h1>Vivian Zhang</h1>
-      <h4>an aspiring front-end developer based in Canada</h4>
+      <p>an aspiring front-end developer based in Canada</p>
+      <button class="btn-branding mt-4">Get started</button>
     </div>
   </body>
 </html>
