--- a/index.html
+++ b/index.html
@@ -30,6 +30,42 @@
     <title>Vivian Zhang's Portfolio</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg" id="header-nav">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/" title="Homepage">Vivian Zhang</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" title="About me">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" title="Contact me">Contact Me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="hero bg-transparent text-center">
       <h2 class="mb-0">Hi, my name is</h2>
       <h1>Vivian Zhang</h1>
