added a snippet of about me on the homepage and included some some navigation links/buttons and made the page responsive

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <title>Vivian Zhang's Portfolio</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" id="header-nav">
+    <nav class="navbar navbar-expand-lg bg-light" id="header-nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="/" title="Homepage">Vivian Zhang</a>
         <button
@@ -66,11 +66,25 @@
       </div>
     </nav>
 
-    <div class="hero bg-transparent text-center">
+    <div class="homepage-hero bg-transparent text-center">
       <h2 class="mb-0">Hi, my name is</h2>
       <h1>Vivian Zhang</h1>
       <p>an aspiring front-end developer based in Canada</p>
-      <button class="btn-branding mt-4">Get started</button>
+      <a href="/" class="btn btn-branding mt-5">Get started</a>
+    </div>
+
+    <div class="container homepage-main mt-5">
+      <h2>a bit about me</h2>
+      <p>
+        Vivian is an aspiring front-end developer based in Canada. She has
+        worked years in customer service and in education and is currently
+        exploring new opportunities in the tech industry as a front-end
+        developer.
+      </p>
+      <div class="navigation-links">
+        <a href="/" class="btn btn-work mt-5">My projects</a>
+        <a href="/" class="btn btn-contact mt-5">Contact me</a>
+      </div>
     </div>
   </body>
 </html>
