added icons navigations

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
         <a href="/" class="btn btn-work mt-5">My projects</a>
         <a href="/" class="btn btn-contact mt-5">Contact me</a>
       </div>
+      <div class="icon-links text-center">
+        <i class="fas fa-envelope"></i>
+        <i class="fab fa-github"></i>
+      </div>
     </div>
   </body>
 </html>
