setup my about page. added a navigation bar, a profile image and some description

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     />
 
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Vivian Zhang's Portfolio</title>
+    <title>About Vivian Zhang</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light" id="header-nav">
@@ -68,21 +68,20 @@
       </div>
     </nav>
 
-    <div class="homepage-hero bg-transparent text-center">
-      <h2 class="mb-0">Hi, my name is</h2>
-      <h1>Vivian Zhang</h1>
-      <p>an aspiring front-end developer based in Canada</p>
-      <a href="/about.html" class="btn btn-branding mt-5">About me</a>
-    </div>
-
-    <div class="container homepage-main mt-5">
-      <div class="navigation-links">
-        <a href="/" class="btn btn-work mt-5">My projects</a>
-        <a href="/" class="btn btn-contact mt-5">Contact me</a>
-      </div>
-      <div class="icon-links text-center">
-        <i class="fas fa-envelope"></i>
-        <i class="fab fa-github"></i>
+    <div class="container about-section">
+      <div class="row">
+        <div class="col-6" id="about-description">
+          <h2 class="mb-5">a bit about me</h2>
+          <p>
+            Vivian is an aspiring front-end developer based in Canada. She has
+            worked years in customer service and in education and is currently
+            exploring new opportunities in the tech industry as a front-end
+            developer.
+          </p>
+        </div>
+        <div class="col-6">
+          <img src="/images/vz.jpg" alt="" class="image-fluid profile-image" />
+        </div>
       </div>
     </div>
   </body>
