changed the profile image and added a card to showcase my projects

--- a/about.html
+++ b/about.html
@@ -80,7 +80,33 @@
           </p>
         </div>
         <div class="col-6">
-          <img src="/images/vz.jpg" alt="" class="image-fluid profile-image" />
+          <img src="/images/vz.png" alt="" class="image-fluid profile-image" />
+        </div>
+      </div>
+    </div>
+    <h2>Check out my projects</h2>
+    <div class="row">
+      <div class="col-6 p-5">
+        <div class="card bg-transparent" style="width: 18rem">
+          <img
+            src="/images/weather_project.png"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Weather app</h5>
+            <p class="card-text">
+              Utilizing my skills in html, css, bootstrap and javascript, I
+              integrated a live API to create this weather application as my
+              final project for SheCodes Plus program.
+            </p>
+            <a
+              href="https://wonderful-lovelace-874af6.netlify.app/"
+              class="btn btn-primary"
+              target="_blank"
+              >Launch weather app</a
+            >
+          </div>
         </div>
       </div>
     </div>
