added some padding to center the profile image, added card to display my project and added a new link in my navigation bar

--- a/about.html
+++ b/about.html
@@ -84,9 +84,32 @@
         </div>
       </div>
     </div>
-    <h2>Check out my projects</h2>
+    <div id="projects">
+      <h2 class="projects">Check out my projects</h2>
+    </div>
     <div class="row">
-      <div class="col-6 p-5">
+      <div class="col-4 p-5">
+        <div class="card bg-transparent" style="width: 18rem">
+          <img src="/images/butter.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">"Butter" Webpage</h5>
+            <p class="card-text">
+              For the final project of the SheCodes Basics program, we were
+              tasked with creating a page about something we were passionate
+              about. Incorporating html and css, I decided to create a webpage
+              article about my favourite group, BTS' latest Billboard
+              achievement.
+            </p>
+            <a
+              href="https://friendly-bell-7f3085.netlify.app"
+              class="btn btn-primary"
+              target="_blank"
+              >Launch Butter webpage</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-4 p-5">
         <div class="card bg-transparent" style="width: 18rem">
           <img
             src="/images/weather_project.png"
@@ -98,7 +121,7 @@
             <p class="card-text">
               Utilizing my skills in html, css, bootstrap and javascript, I
               integrated a live API to create this weather application as my
-              final project for SheCodes Plus program.
+              final project for the SheCodes Plus program.
             </p>
             <a
               href="https://wonderful-lovelace-874af6.netlify.app/"
