--- a/index.html
+++ b/index.html
@@ -47,17 +47,21 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="Homepage"
+              <a class="nav-link" aria-current="page" href="/" title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html" title="About me"
                 >About Me</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/about.html#projects"
+                title="My Projects"
+                >My Projects</a
               >
             </li>
             <li class="nav-item">
@@ -77,7 +81,7 @@
 
     <div class="container homepage-main mt-5">
       <div class="navigation-links">
-        <a href="/" class="btn btn-work mt-5">My projects</a>
+        <a href="/about.html#projects" class="btn btn-work mt-5">My projects</a>
         <a href="/" class="btn btn-contact mt-5">Contact me</a>
       </div>
       <div class="icon-links text-center">
