changed some styling on about.html and setup the contact.html page

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="/" title="Homepage">Vivian Zhang</a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler btn-light"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -61,7 +61,9 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" title="Contact me">Contact Me</a>
+              <a class="nav-link" href="/contact.html" title="Contact me"
+                >Contact Me</a
+              >
             </li>
           </ul>
         </div>
@@ -69,9 +71,9 @@
     </nav>
 
     <div class="container about-section">
-      <div class="row">
-        <div class="col-6" id="about-description">
-          <h2 class="mb-5">a bit about me</h2>
+      <div class="row about-description">
+        <div class="col-6">
+          <h2 class="mb-4">a bit about me</h2>
           <p>
             Vivian is an aspiring front-end developer based in Canada. She has
             worked years in customer service and in education and is currently
@@ -89,7 +91,7 @@
     </div>
     <div class="row">
       <div class="col-4 p-5">
-        <div class="card bg-transparent" style="width: 18rem">
+        <div class="card project-cards" style="width: 18rem">
           <img src="/images/butter.png" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">"Butter" Webpage</h5>
@@ -110,7 +112,7 @@
         </div>
       </div>
       <div class="col-4 p-5">
-        <div class="card bg-transparent" style="width: 18rem">
+        <div class="card project-cards" style="width: 18rem">
           <img
             src="/images/weather_project.png"
             class="card-img-top"
