--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     />
 
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Vivian Zhang's Portfolio</title>
+    <title>Contact Vivian Zhang</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light" id="header-nav">
@@ -69,23 +69,5 @@
         </div>
       </div>
     </nav>
-
-    <div class="homepage-hero text-center">
-      <h2 class="mb-0">Hi, my name is</h2>
-      <h1>Vivian Zhang</h1>
-      <p>an aspiring front-end developer based in Canada</p>
-      <a href="/about.html" class="btn btn-branding mt-5">About me</a>
-    </div>
-
-    <div class="container homepage-main mt-5">
-      <div class="navigation-links">
-        <a href="/about.html#projects" class="btn btn-work mt-5">My projects</a>
-        <a href="/" class="btn btn-contact mt-5">Contact me</a>
-      </div>
-      <div class="icon-links text-center">
-        <i class="fas fa-envelope"></i>
-        <i class="fab fa-github"></i>
-      </div>
-    </div>
   </body>
 </html>
