--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <title>Vivian Zhang's Portfolio</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light" id="header-nav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="/" title="Homepage">Vivian Zhang</a>
         <button
