added a contact me/ mailto button to my contact page and added css to stylize the page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container homepage-main mt-5">
       <div class="navigation-links">
         <a href="/about.html#projects" class="btn btn-work mt-5">My projects</a>
-        <a href="/" class="btn btn-contact mt-5">Contact me</a>
+        <a href="/contact.html" class="btn btn-contact mt-5">Contact me</a>
       </div>
       <div class="icon-links text-center">
         <i class="fas fa-envelope"></i>
