--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
     <title>Contact Vivian Zhang</title>
   </head>
-  <body>
+  <body class="contact-page-body">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="/" title="Homepage">Vivian Zhang</a>
@@ -69,5 +69,21 @@
         </div>
       </div>
     </nav>
+
+    <div class="contact-title">
+      <h1 class="p-5">Let's get in touch!</h1>
+    </div>
+
+    <div class="container contact-info">
+      <div class="row">
+        <div class="col-6 contact-inquiry">
+          <h2 class="text-white">Inquiries</h2>
+          <p>You can contact me here:</p>
+        </div>
+        <div class="col-3 contact-email">
+          <a href="mailto:vvynz12@gmail.com" class="btn btn-email">Email me!</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
