simplified the code for the contact page

--- a/contact.html
+++ b/contact.html
@@ -74,13 +74,12 @@
       <h1 class="p-5">Let's get in touch!</h1>
     </div>
 
-    <div class="container contact-info">
-      <div class="row">
-        <div class="col-6 contact-inquiry">
+    <div class="contact-box d-flex justify-content-between">
+        <div class="contact-inquiry">
           <h2 class="text-white">Inquiries</h2>
           <p>You can contact me here:</p>
         </div>
-        <div class="col-3 contact-email">
+        <div class="contact-email">
           <a href="mailto:vvynz12@gmail.com" class="btn btn-email">Email me!</a>
         </div>
       </div>
