added an email link and social media links to a footer on each page

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
       </div>
     </nav>
 
-    <div class="container about-section">
+    <div class="container about-section mt-4">
       <div class="row about-description">
         <div class="col-6">
           <h2 class="mb-4">a bit about me</h2>
@@ -86,7 +86,7 @@
         </div>
       </div>
     </div>
-    <div id="projects">
+    <div class="project-title mt-3">
       <h2 class="projects">Check out my projects</h2>
     </div>
     <div class="row">
@@ -133,6 +133,19 @@
             >
           </div>
         </div>
+      </div>
+    </div>
+    <div class="footer mt-5">
+      <div class="d-flex justify-content-center">
+        <a href="mailto:vvynz@gmail.com" class="email-link"
+          >vvynz12@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center mb-4">
+        <a href="mailto:vvynz12@gmail.com"><i class="fas fa-envelope"></i></a>
+        <a href="https://github.com/vvynz" target="_blank"
+          ><i class="fab fa-github"></i
+        ></a>
       </div>
     </div>
   </body>
