--- a/index.html
+++ b/index.html
@@ -77,14 +77,16 @@
       <a href="/about.html" class="btn btn-branding mt-5">About me</a>
     </div>
 
-    <div class="container homepage-main mt-5">
-      <div class="navigation-links">
+    <div class="footer mt-5">
+      <div class="navigation-links d-flex justify-content-center">
         <a href="/about.html#projects" class="btn btn-work mt-5">My projects</a>
         <a href="/contact.html" class="btn btn-contact mt-5">Contact me</a>
       </div>
-      <div class="icon-links text-center">
-        <i class="fas fa-envelope"></i>
-        <i class="fab fa-github"></i>
+      <div class="social-links d-flex justify-content-center mb-4">
+        <a href="mailto:vvynz12@gmail.com"><i class="fas fa-envelope"></i></a>
+        <a href="https://github.com/vvynz" target="_blank"
+          ><i class="fab fa-github"></i
+        ></a>
       </div>
     </div>
   </body>
