added an email link and social media links to a footer on the contact page and stylized the footer links and icons

--- a/contact.html
+++ b/contact.html
@@ -75,13 +75,26 @@
     </div>
 
     <div class="contact-box d-flex justify-content-between">
-        <div class="contact-inquiry">
-          <h2 class="text-white">Inquiries</h2>
-          <p>You can contact me here:</p>
-        </div>
-        <div class="contact-email">
-          <a href="mailto:vvynz12@gmail.com" class="btn btn-email">Email me!</a>
-        </div>
+      <div class="contact-inquiry">
+        <h2 class="text-white">Inquiries</h2>
+        <p>You can contact me here:</p>
+      </div>
+      <div class="contact-email">
+        <a href="mailto:vvynz12@gmail.com" class="btn btn-email">Email me!</a>
+      </div>
+    </div>
+
+    <div class="contact-page-footer mt-5">
+      <div class="d-flex justify-content-center">
+        <a href="mailto:vvynz@gmail.com" class="email-link"
+          >vvynz12@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center mb-4">
+        <a href="mailto:vvynz12@gmail.com"><i class="fas fa-envelope"></i></a>
+        <a href="https://github.com/vvynz" target="_blank"
+          ><i class="fab fa-github"></i
+        ></a>
       </div>
     </div>
   </body>
