--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
     <div class="project-title mt-3">
       <h2 class="projects">Check out my projects</h2>
     </div>
-    <div class="row">
+    <div class="d-flex justify-content-center">
       <div class="col-4 p-5">
         <div class="card project-cards" style="width: 18rem">
           <img src="/images/butter.png" class="card-img-top" alt="..." />
