to make this project more seo friendly, i added meta description to my homepage and added titles to all the links to all the pages, added alternative text to images, and added an open-source link to this project's github repository at the bottom of each page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     />
 
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Vivian Zhang's Portfolio</title>
+    <meta
+      name="description"
+      content="Vivia Zhang is an aspiring front-end developer based in Canada. Here you can learn about her journey and check out her work portfolio!"
+    />
+    <title>An Aspiring Front-End Developer - Vivian Zhang</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav">
@@ -56,12 +60,23 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html" title="About me"
+              <a class="nav-link" href="/about.html" title="About Vivian Zhang"
                 >About Me</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html" title="Contact me"
+              <a
+                class="nav-link"
+                href="/about.html#projects"
+                title="Vivian Zhang's portfolio"
+                >My Projects</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/contact.html"
+                title="Contact Vivian Zhang"
                 >Contact Me</a
               >
             </li>
@@ -74,20 +89,54 @@
       <h2 class="mb-0">Hi, my name is</h2>
       <h1>Vivian Zhang</h1>
       <p>an aspiring front-end developer based in Canada</p>
-      <a href="/about.html" class="btn btn-branding mt-5">About me</a>
+      <a
+        href="/about.html"
+        title="About Vivian Zhang"
+        class="btn btn-branding mt-5"
+        >About me</a
+      >
     </div>
 
     <div class="footer mt-5">
       <div class="navigation-links d-flex justify-content-center">
-        <a href="/about.html#projects" class="btn btn-work mt-5">My projects</a>
-        <a href="/contact.html" class="btn btn-contact mt-5">Contact me</a>
+        <a
+          href="/about.html#projects"
+          class="btn btn-work mt-5"
+          title="Vivian Zhang's portfolio"
+          >My projects</a
+        >
+        <a
+          href="/contact.html"
+          class="btn btn-contact mt-5"
+          title="Contact Vivian Zhang"
+          >Contact me</a
+        >
+      </div>
+      <div class="d-flex justify-content-center mt-3">
+        <a
+          href="mailto:vvynz@gmail.com"
+          class="email-link"
+          title="Email Vivian Zhang"
+          >vvynz12@gmail.com</a
+        >
       </div>
       <div class="social-links d-flex justify-content-center mb-4">
-        <a href="mailto:vvynz12@gmail.com"><i class="fas fa-envelope"></i></a>
+        <a href="mailto:vvynz12@gmail.com"
+          ><i class="fas fa-envelope" title="Email link"></i
+        ></a>
         <a href="https://github.com/vvynz" target="_blank"
-          ><i class="fab fa-github"></i
+          ><i class="fab fa-github" title="Github profile"></i
         ></a>
       </div>
+      <p class="text-center mb-4">
+        This project was coded by Vivian Zhang and is
+        <a
+          href="https://github.com/vvynz/responsive-w4-portfolio-project"
+          target="_blank"
+        >
+          open-sourced</a
+        >.
+      </p>
     </div>
   </body>
 </html>
