--- a/about.html
+++ b/about.html
@@ -47,17 +47,21 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="Homepage"
+              <a class="nav-link" aria-current="page" href="/" title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html" title="About me"
+              <a class="nav-link active" href="/about.html" title="About me"
                 >About Me</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/about.html#projects"
+                title="Vivian Zhang's portfolio"
+                >My Projects</a
               >
             </li>
             <li class="nav-item">
@@ -70,10 +74,10 @@
       </div>
     </nav>
 
-    <div class="container about-section mt-4">
+    <div class="container about-section">
       <div class="row about-description">
         <div class="col-6">
-          <h2 class="mb-4">a bit about me</h2>
+          <h2 class="m-2">a bit about me</h2>
           <p>
             Vivian is an aspiring front-end developer based in Canada. She has
             worked years in customer service and in education and is currently
@@ -82,17 +86,25 @@
           </p>
         </div>
         <div class="col-6">
-          <img src="/images/vz.png" alt="" class="image-fluid profile-image" />
+          <img
+            src="/images/vz.png"
+            alt="Vivian's profile image"
+            class="image-fluid profile-image"
+          />
         </div>
       </div>
     </div>
-    <div class="project-title mt-3">
-      <h2 class="projects">Check out my projects</h2>
+    <div class="project-title">
+      <h2 id="projects">Check out my projects</h2>
     </div>
     <div class="d-flex justify-content-center">
       <div class="col-4 p-5">
         <div class="card project-cards" style="width: 18rem">
-          <img src="/images/butter.png" class="card-img-top" alt="..." />
+          <img
+            src="/images/butter.png"
+            class="card-img-top"
+            alt="Butter project preview"
+          />
           <div class="card-body">
             <h5 class="card-title">"Butter" Webpage</h5>
             <p class="card-text">
@@ -116,7 +128,7 @@
           <img
             src="/images/weather_project.png"
             class="card-img-top"
-            alt="..."
+            alt="Weather app preview"
           />
           <div class="card-body">
             <h5 class="card-title">Weather app</h5>
@@ -137,16 +149,27 @@
     </div>
     <div class="footer mt-5">
       <div class="d-flex justify-content-center">
-        <a href="mailto:vvynz@gmail.com" class="email-link"
+        <a href="mailto:vvynz@gmail.com" class="email-link" title="Email link"
           >vvynz12@gmail.com</a
         >
       </div>
       <div class="social-links d-flex justify-content-center mb-4">
-        <a href="mailto:vvynz12@gmail.com"><i class="fas fa-envelope"></i></a>
+        <a href="mailto:vvynz12@gmail.com"
+          ><i class="fas fa-envelope" title="Email link"></i
+        ></a>
         <a href="https://github.com/vvynz" target="_blank"
-          ><i class="fab fa-github"></i
+          ><i class="fab fa-github" title="Github profile"></i
         ></a>
       </div>
+      <p class="text-center mb-4">
+        This project was coded by Vivian Zhang and is
+        <a
+          href="https://github.com/vvynz/responsive-w4-portfolio-project"
+          target="_blank"
+        >
+          open-sourced</a
+        >.
+      </p>
     </div>
   </body>
 </html>
