--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="Homepage"
+              <a class="nav-link" aria-current="page" href="/" title="Homepage"
                 >Home</a
               >
             </li>
@@ -61,7 +57,15 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html" title="Contact me"
+              <a
+                class="nav-link"
+                href="/about.html#projects"
+                title="Vivian Zhang's portfolio"
+                >My Projects</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/contact.html" title="Contact me"
                 >Contact Me</a
               >
             </li>
@@ -80,22 +84,38 @@
         <p>You can contact me here:</p>
       </div>
       <div class="contact-email">
-        <a href="mailto:vvynz12@gmail.com" class="btn btn-email">Email me!</a>
+        <a
+          href="mailto:vvynz12@gmail.com"
+          class="btn btn-email"
+          title="Email Vivian Zhang"
+          >Email me!</a
+        >
       </div>
     </div>
 
     <div class="contact-page-footer mt-5">
       <div class="d-flex justify-content-center">
-        <a href="mailto:vvynz@gmail.com" class="email-link"
+        <a href="mailto:vvynz@gmail.com" class="email-link" title="Email link"
           >vvynz12@gmail.com</a
         >
       </div>
       <div class="social-links d-flex justify-content-center mb-4">
-        <a href="mailto:vvynz12@gmail.com"><i class="fas fa-envelope"></i></a>
+        <a href="mailto:vvynz12@gmail.com"
+          ><i class="fas fa-envelope" title="Email link"></i
+        ></a>
         <a href="https://github.com/vvynz" target="_blank"
-          ><i class="fab fa-github"></i
+          ><i class="fab fa-github" title="Github profile"></i
         ></a>
       </div>
+      <p class="text-center mb-4">
+        This project was coded by Vivian Zhang and is
+        <a
+          href="https://github.com/vvynz/responsive-w4-portfolio-project"
+          target="_blank"
+        >
+          open-sourced</a
+        >.
+      </p>
     </div>
   </body>
 </html>
