added meta descriptions to the contact and about pages

--- a/about.html
+++ b/about.html
@@ -27,6 +27,10 @@
     />
 
     <link rel="stylesheet" href="styles/portfolio.css" />
+    <meta
+      name="description"
+      content="Vivian Zhang is an aspiring front-end developer based in Canada. Here you can learn about her journey and check out her work portfolio!"
+    />
     <title>About Vivian Zhang</title>
   </head>
   <body>
