--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="styles/portfolio.css" />
     <meta
       name="description"
-      content="Vivia Zhang is an aspiring front-end developer based in Canada. Here you can learn about her journey and check out her work portfolio!"
+      content="Vivian Zhang is an aspiring front-end developer based in Canada. Here you can learn about her journey and check out her work portfolio!"
     />
     <title>An Aspiring Front-End Developer - Vivian Zhang</title>
   </head>
