--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,10 @@
     />
 
     <link rel="stylesheet" href="styles/portfolio.css" />
+    <meta
+      name="description"
+      content="Contact Vivian Zhang. Vivian Zhang is an aspiring front-end developer based in Canada. Here you can learn about her journey and check out her work portfolio!"
+    />
     <title>Contact Vivian Zhang</title>
   </head>
   <body class="contact-page-body">
