changed the font size of my about me description and added some margin to the top of the paragraph

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
       <div class="row about-description">
         <div class="col-6">
           <h2 class="m-2">a bit about me</h2>
-          <p>
+          <p class="mt-3">
             Vivian is an aspiring front-end developer based in Canada. She has
             worked years in customer service and in education and is currently
             exploring new opportunities in the tech industry as a front-end
