--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
     </nav>
 
     <div class="contact-title">
-      <h1 class="p-5">Let's get in touch!</h1>
+      <h1 class="text-center p-5">Let's get in touch!</h1>
     </div>
 
     <div class="contact-box d-flex justify-content-between">
