--- a/about.html
+++ b/about.html
@@ -99,10 +99,10 @@
       </div>
     </div>
     <div class="project-title">
-      <h2 id="projects">Check out my projects</h2>
+      <h2 class="mb-5" id="projects">Check out my projects</h2>
     </div>
     <div class="d-flex justify-content-center">
-      <div class="col-md-4 m-3">
+      <div class="col-md-4">
         <div class="card project-cards" style="width: 18rem">
           <img
             src="/images/butter.png"
@@ -127,7 +127,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 m-3">
+      <div class="col-md-4">
         <div class="card project-cards" style="width: 18rem">
           <img
             src="/images/weather_project.png"
