made adjustments to the css so that the about description, profile image and project cards are responsive when on mobile devices

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 
     <div class="container about-section">
       <div class="row about-description">
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="m-2">a bit about me</h2>
           <p class="mt-3">
             Vivian is an aspiring front-end developer based in Canada. She has
@@ -89,11 +89,11 @@
             developer.
           </p>
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <img
             src="/images/vz.png"
             alt="Vivian's profile image"
-            class="image-fluid profile-image"
+            class="img-fluid profile-image"
           />
         </div>
       </div>
@@ -101,52 +101,54 @@
     <div class="project-title">
       <h2 class="mb-5" id="projects">Check out my projects</h2>
     </div>
-    <div class="d-flex justify-content-center">
-      <div class="col-md-4">
-        <div class="card project-cards" style="width: 18rem">
-          <img
-            src="/images/butter.png"
-            class="card-img-top"
-            alt="Butter project preview"
-          />
-          <div class="card-body">
-            <h5 class="card-title">"Butter" Webpage</h5>
-            <p class="card-text">
-              For the final project of the SheCodes Basics program, we were
-              tasked with creating a page about something we were passionate
-              about. Incorporating html and css, I decided to create a webpage
-              article about my favourite group, BTS' latest Billboard
-              achievement.
-            </p>
-            <a
-              href="https://friendly-bell-7f3085.netlify.app"
-              class="btn btn-primary"
-              target="_blank"
-              >Launch Butter webpage</a
-            >
+    <div class="container d-flex justify-content-center">
+      <div class="row">
+        <div class="col-md-6 mb-3 text-center">
+          <div class="card project-cards" style="width: 18rem">
+            <img
+              src="/images/butter.png"
+              class="card-img-top"
+              alt="Butter project preview"
+            />
+            <div class="card-body">
+              <h5 class="card-title">"Butter" Webpage</h5>
+              <p class="card-text">
+                For the final project of the SheCodes Basics program, we were
+                tasked with creating a page about something we were passionate
+                about. Incorporating html and css, I decided to create a webpage
+                article about my favourite group, BTS' latest Billboard
+                achievement.
+              </p>
+              <a
+                href="https://friendly-bell-7f3085.netlify.app"
+                class="btn btn-primary"
+                target="_blank"
+                >Launch Butter webpage</a
+              >
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card project-cards" style="width: 18rem">
-          <img
-            src="/images/weather_project.png"
-            class="card-img-top"
-            alt="Weather app preview"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Weather app</h5>
-            <p class="card-text">
-              Utilizing my skills in html, css, bootstrap and javascript, I
-              integrated a live API to create this weather application as my
-              final project for the SheCodes Plus program.
-            </p>
-            <a
-              href="https://wonderful-lovelace-874af6.netlify.app/"
-              class="btn btn-primary"
-              target="_blank"
-              >Launch weather app</a
-            >
+        <div class="col-md-6">
+          <div class="card project-cards" style="width: 18rem">
+            <img
+              src="/images/weather_project.png"
+              class="card-img-top"
+              alt="Weather app preview"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Weather app</h5>
+              <p class="card-text">
+                Utilizing my skills in html, css, bootstrap and javascript, I
+                integrated a live API to create this weather application as my
+                final project for the SheCodes Plus program.
+              </p>
+              <a
+                href="https://wonderful-lovelace-874af6.netlify.app/"
+                class="btn btn-primary"
+                target="_blank"
+                >Launch weather app</a
+              >
+            </div>
           </div>
         </div>
       </div>
