--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       name="description"
       content="Vivian Zhang is an aspiring front-end developer based in Canada. Here you can learn about her journey and check out her work portfolio!"
     />
-    <title>An Aspiring Front-End Developer - Vivian Zhang</title>
+    <title>A Front-End Developer - Vivian Zhang</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav">
@@ -88,7 +88,7 @@
     <div class="homepage-hero text-center">
       <h2 class="mb-0">Hi, my name is</h2>
       <h1>Vivian Zhang</h1>
-      <p>an aspiring front-end developer based in Canada</p>
+      <p>a front-end developer based in Canada</p>
       <a
         href="/about.html"
         title="About Vivian Zhang"
